    + [ADB] Anchor the regular expression for the "gz-file-not-gzip" tag so
      that files with names that contain ".gz" but do not end in that string
      are not flagged.  Patch by Raphael Geissert.  (Closes: #523352)
  * checks/menu-format{,.desc}:
    + [RA] Remove desktop-mimetype-without-update-call.  This is now
      handled by triggers.  Thanks, Chow Loong Jin.  (Closes: #525133)
  * checks/scripts{,.desc}:
    + [RA] Handle command delimiters, $() expressions, and braces and
      parentheses in the checks for correct diversion handling.  Patch
      from Raphael Geissert.  (Closes: #523708)
    + [RA] Clarify the php-script-but-no-phpX-cli-dep description to
      explain why it warns about a php4-cli dependency.  (Closes: #525484)
  * checks/shared-libs:
    + [RA] Strip trailing slashes from the libdir path in *.la files
      before checking it for correctness.  Thanks, Patrick Matthäi.
      (Closes: #524228)
    + [RA] Special-case *.la files for Python modules installed in
      /usr/share/pyshared, since they're moved during install.  Thanks,
      Jonas Smedegaard.  (Closes: #522623)
  * checks/standards-version.desc:
    + [ADB] Fix a couple of spelling mistakes ("verison" -> "version").
      Thanks, Guillaume Delacour.  (Closes: #522643)

  * collection/file-info:
    + [ADB] Call "file" with "--" to ensure that any filenames in the package
      that start with "-" aren't interpreted as options to "file".  Thanks,
      Trent W. Buck.  (Closes: #523408)

  * doc/desc-files:
    + [ADB] Mention the new Standards-Version field available for tests.
      Patch by Raphael Geissert.

  * lib/Lintian/Output.pm:
    + [RA] With --color=html, display the HTML rendering of the long tag
      description rather than the text version and escape HTML
      metacharacters in the tag information.  Patch from Raphael Geissert.
      (Closes: #522527)
  * lib/Lintian/Relation.pm:
    + [ADB] Fix a spelling mistake ("verison" -> "version").  Thanks,