@@ -1,0 +1,6 @@
+Testname: patch-systems-empty-series
+Sequence: 6000
+Version: 1.0
+Description: Test for quilt patches with empty series
+Test-Against: quilt-build-dep-but-no-series-file
+References: Debian Bug #525005
